# Junior

./: README.md
Algorithms/: lgq-notes.md  notes.md
Algorithms/codes/: sort.cpp
CG/: .gitignore  notes.md  real-notes.md
CG/homework-1/: README.md
CG/homework-1/Project/: Project1.sln
CG/homework-2/: README.md  intersecting.cpp  intersecting.tri  overlapping.cpp  overlapping.tri  rec.cpp  rec.txt
CG/homework-3/: README.md  glad.c  main.cpp  mesh.h  model.h  scrap.fs
CSE/: handson-notes.md  lab-notes.md  learning-notes.md  lecture-notes.md  reading-notes.md
CSE/handson-4/: deploy.sh
CSE/handson-4/dockerfiles/: cart.dockerfile  cart.sh  catalogue.dockerfile  catalogue.sh  frontend.dockerfile  frontend.sh  mongo.conf  mongo.sh  orders.dockerfile  payment.dockerfile  payment.sh  shipping.dockerfile  shipping.sh  user-db.dockerfile  user.dockerfile  user.sh
CSE/handson-4/zookeeper/: App.java  Executor.java
CSE/lab-1/: extent_client.h  extent_protocol.h  fuse.cc  inode_manager.cc  part1_tester  yfs_client  yfs_client.cc  yfs_client.h
CSE/lab-2/: GNUmakefile  lock_server.h  yfs_client.cc  yfs_client.h
CSE/lab-3/: GNUmakefile  extent_client.cc  extent_client.h  extent_server.cc  fuse.cc  inode_manager.cc  lock_client.cc  lock_client_cache.cc  lock_protocol.h  lock_server.cc  lock_server_cache.cc  mytest2.sh  yfs_client.cc  yfs_client.h
CSE/lab-4/: GNUmakefile  extent_client.cc  extent_client.h  extent_client_cache.cc  extent_client_cache.h  extent_protocol.h  extent_server_cache.cc  extent_server_cache.h  extent_smain.cc  inode_manager.cc  lock_client_cache.h  lock_server_cache.h  mytest.sh  mytest2.sh  yfs_client.cc  yfs_client.h
CSE/lab-4/test/: mytest.sh
CV/project-1/: controller.py  main.py  model.py  view.py
CV/project-2/: controller.py  model.py  view.py
Compilers/: learning-notes.md
Compilers/lab-1/: slp.cc  slp.h
Compilers/lab-2/: scanner.h  tiger.lex
Compilers/lab-3/: tiger.y
Compilers/lab-4/: semant.cc
Compilers/lab-5&6/codegen/: assem.cc  assem.h  codegen.cc  codegen.h
Compilers/lab-5&6/errormsg/: errormsg.cc  errormsg.h
Compilers/lab-5&6/escape/: escape.cc
Compilers/lab-5&6/frame/: frame.h  x64frame.cc
Compilers/lab-5&6/liveness/: flowgraph.cc  liveness.cc  liveness.h
Compilers/lab-5&6/main/: main.cc
Compilers/lab-5&6/regalloc/: color.cc  color.h  regalloc.cc  regalloc.h
Compilers/lab-5&6/translate/: translate.cc  translate.h  tree.cc  tree.h
Compilers/lab-5&6/util/: graph.h
GP/: .gitignore  learning-notes.md
GP/homework-0/: 关于军事题材游戏的调研报告.md
GP/homework-1/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
GP/homework-2/: 《塞尔达传说 旷野之息》分析与评价报告.md
GP/homework-3/: README.md
GP/homework-3/ProjectSettings/: ProjectSettings.asset  (+2 more)
GP/homework-4/: README.md  manual.md
GP/homework-5/: README.md
GP/homework-6/: README.md
GP/homework-7/: README.md
GP/homework-8/: README.md
HCI/homework-1/: report.md
HCI/lecture-notes/: 3.16-notes.md  3.18-notes.md  3.2-notes.md  3.23-notes.md  3.4-notes.md  3.9-notes.md  4.13-notes.md  4.15-notes.md  4.20-notes.md  4.27-notes.md  4.29-notes.md  5.18-notes.md  5.25-notes.md  5.27-notes.md  6.1-notes.md  6.10-notes.md  6.15-notes.md  6.8-notes.md
OS/: getting-started.md  homework.md  lab-notes.md
OS/chcore/: .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  answers-lab2.txt
OS/chcore/boot/: boot.h  config.cmake  image.h  init_c.c  mmu.c  smp.c  start.S  tools.S
OS/chcore/boot/print/: macro.S  printf.c  printf.h  uart.c  uart.h
OS/chcore/doc/: 517021910761-lab1.md  517021910761-lab2.md  517021910761-lab3.md  517021910761-lab4.md  517021910761-lab5.md  getting-started.md
OS/chcore/kernel/: CMakeLists.txt  main.c  monitor.c
OS/chcore/kernel/common/: asm.h  bitops.h  errno.h  fs.c  kmalloc.h  list.h  lock.c  lock.h  macro.h  mm.h  mmu.h  printk.c  printk.h  radix.c  radix.h  smp.c  smp.h  sync.h  tools.S  tools.h  types.h  uaccess.h  uart.c  uart.h  util.h
OS/chcore/kernel/exception/: esr.h  exception.c  exception.h  exception_table.S  irq.c  irq.h  pgfault.c  timer.c  timer.h
OS/chcore/kernel/ipc/: ipc.h  ipc_call.c  ipc_client.c  ipc_return.c  ipc_server.c
OS/chcore/kernel/mm/: buddy.c  buddy.h  buddy_struct.h  bzero.S  cache.c  kmalloc.c  memcpy.S  memmove.S  memset.S  mm.c  mmparse.c  page_table.S  page_table.c  page_table.h  slab.c  slab.h  uaccess.c  vm_syscall.c  vmregion.c  vmspace.c  vmspace.h
OS/chcore/kernel/process/: capability.c  capability.h  process.c  process.h  thread.c  thread.h  thread_env.c
OS/chcore/kernel/sched/: context.c  context.h  policy_rr.c  sched.c  sched.h
OS/chcore/kernel/syscall/: syscall.c  syscall_num.h
OS/chcore/kernel/tests/: barrier.c  barrier.h  tests.c  tst_mutex.c  tst_sched.c
OS/chcore/lib/: CMakeLists.txt  cpio.c  cpio.h  efi.h  elf.c  elf.h  endianness.h  errno.h  machine.h  registers.h  types.h
OS/chcore/scripts/: build.sh  compile_user.sh  grade-lab1  grade-lab2  grade-lab3  grade-lab4  grade-lab5  gradelib.py  linker-aarch64.lds.in
OS/chcore/tests/include/: minunit.h
OS/chcore/tests/mm/buddy/: test_buddy.c
OS/chcore/tests/mm/page_table/: test_aarch64_page_table.c
OS/chcore/user/: CMakeLists.txt
OS/chcore/user/apps/: init.c  init_main.c  init_test.c
OS/chcore/user/lab3/: CMakeLists.txt  faultread.c  faultwrite.c  hello.c  testcreatepmo.c  testmappmo.c  testmappmoerr.c  testpf.c  testputc.c  testsbrk.c
OS/chcore/user/lab4/: CMakeLists.txt  ipc_data.c  ipc_data_server.c  ipc_mem.c  ipc_mem_server.c  ipc_reg.c  ipc_reg_server.c  spawn_basic.c  spawn_child.c  spawn_info.c  yield_multi.c  yield_multi_aff.c  yield_single.c  yield_spin.c
OS/chcore/user/lib/: bug.h  cpio.c  cpio.h  elf.c  endianness.h  errno.h  fs_defs.h  ipc.c  ipc.h  launcher.h  liblauncher.c  libmain.c  malloc.c  print.c  proc.h  spawn.c  spawn.h  string.c  string.h  syscall.c  syscall.h  thread.c  thread.h  type.h
OS/chcore/user/tmpfs/: CMakeLists.txt  hashtable.h  list.h  radix.h  tmpfs.c  tmpfs.h  tmpfs_main.c  tmpfs_server.c  tmpfs_server.h  tmpfs_test.c
(+176 files in other folders)
